--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,83 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: #1d1e22;
 }
+
+:root {
+  --ease-elastic-3: cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  --ease-elastic-4: cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  --ease-out-5: cubic-bezier(0.2, 0.8, 0.2, 1);
+  --ease-3: cubic-bezier(0.25, 0.1, 0.25, 1);
+  --icon-fill: #082f49;
+}
+
+html.dark .theme-toggle {
+  --icon-fill: white;
+}
+
+.sun-and-moon > :is(.moon, .sun, .sun-beams) {
+  transform-origin: center;
+}
+
+.sun-and-moon > :is(.moon, .sun) {
+  fill: var(--icon-fill);
+}
+
+.sun-and-moon > .sun-beams {
+  stroke: var(--icon-fill);
+  stroke-width: 2px;
+}
+
+html.dark .sun-and-moon > .sun {
+  transform: scale(1.75);
+}
+
+html.dark .sun-and-moon > .sun-beams {
+  opacity: 0;
+}
+
+html.dark .sun-and-moon > .moon > circle {
+  transform: translateX(-7px);
+}
+
+@supports (cx: 1) {
+  html.dark .sun-and-moon > .moon > circle {
+    cx: 17;
+    transform: translateX(0);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .sun-and-moon > .sun {
+    transition: transform 0.5s var(--ease-elastic-3);
+  }
+
+  .sun-and-moon > .sun-beams {
+    transition: transform 0.5s var(--ease-elastic-4), opacity 0.5s var(--ease-3);
+  }
+
+  .sun-and-moon .moon > circle {
+    transition: transform 0.25s var(--ease-out-5);
+  }
+
+  @supports (cx: 1) {
+    .sun-and-moon .moon > circle {
+      transition: cx 0.25s var(--ease-out-5);
+    }
+  }
+
+  html.dark .sun-and-moon > .sun {
+    transition-timing-function: var(--ease-3);
+    transition-duration: 0.25s;
+    transform: scale(1.75);
+  }
+
+  html.dark .sun-and-moon > .sun-beams {
+    transition-duration: 0.15s;
+    transform: rotateZ(-25deg);
+  }
+
+  html.dark .sun-and-moon > .moon > circle {
+    transition-duration: 0.5s;
+    transition-delay: 0.25s;
+  }
+}
