--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import 'react-awesome-button/dist/styles.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -29,8 +31,33 @@
   --ease-3: cubic-bezier(0.25, 0.1, 0.25, 1);
   --icon-fill: #082f49;
   --cursor-color: #01204C;
-
 }
+
+.aws-btn {
+  --button-default-height: 55px;
+  --button-default-font-size: 16px;
+  --button-default-border-radius: 30px;
+  --button-horizontal-padding: 40px;
+  --button-raise-level: 5px;
+  --button-hover-pressure: 2;
+  --transform-speed: .185s;
+  --button-primary-color: #01204c;
+  --button-primary-color-dark: #02122c;
+  --button-primary-color-light: #ffffff;
+  --button-primary-color-hover: #193a6a;
+  --button-primary-border: none;
+  --button-secondary-color: #ffffff;
+  --button-secondary-color-dark: #acb2b9;
+  --button-secondary-color-light: #01204c;
+  --button-secondary-color-hover: #d5dee8;
+  --button-secondary-border: none;
+  --button-anchor-color: #f3c8ad;
+  --button-anchor-color-dark: #734922;
+  --button-anchor-color-light: #4c3016;
+  --button-anchor-color-hover: #f1bfa0;
+  --button-anchor-border: 1px solid #8c633c;
+}
+
 .dark:root {
   --cursor-color: white;
 }
