--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@
   --ease-out-5: cubic-bezier(0.2, 0.8, 0.2, 1);
   --ease-3: cubic-bezier(0.25, 0.1, 0.25, 1);
   --icon-fill: #082f49;
-  --cursor-color: #01204C;
+  --cursor-color: #fff;
 }
 
 .aws-btn {
